--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ nav ul li a {
 
 header h1 {
     text-align: center;
-    font-weight: normal;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
