--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,13 @@ footer p {
     margin: 0;
 }
 
+center-iframe {
+    display: block;
+    margin: auto; /* Centers horizontally */
+    width: 600px; /* Must define a width */
+    height: 400px;
+  }
+
 table {
             width: 80%; /* Set the table width */
             margin: 20px auto; /* Center the table */
