--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@ header {
     padding: 20px 0;
     border-bottom: 1px solid #ddd;
     background-image: url("havendr-b.png")
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 nav ul {
