--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ header {
     background-color: #fff;
     padding: 20px 0;
     border-bottom: 1px solid #ddd;
-    background-image: url("havendr-b.png")
-    background-size: contain;
+    background-image: url("havendr-b.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 nav ul {
